Updated my index.html

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         My core drive is building useful, tangible products.
                     </p>
                     <p class="profile-paragraph">
-                        I have a strong interest in startups (see my resume for details) and
-                        I'm always looking for challenging projects/opportunities to learn new technologies.
-                        Feel free to check out my work to see what I've been creating 😊
+                        I have a strong interest in ambitious projects (see my resume for details) and
+                        I'm always looking for new challenges and opportunities to create value.
+                        Feel free to check out my work to see what I've been building 😊
                     </p>
                 </div>
                 <div class="contact-section">
