--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
                 <div class="profile-text">
                     <p class="profile-paragraph">
                         I'm an MIT undergraduate studying Computer Science and Economics, 
-                        with a strong focus on systems and low-level software. 
+                        with a strong focus on computer systems and low-level software. 
                         My core drive is building useful, tangible products.
                     </p>
                     <p class="profile-paragraph">
-                        I have a strong interest in ambitious projects (see my resume for details) and
-                        I'm always looking for new challenges and opportunities to create value.
-                        Feel free to check out my work to see what I've been building 😊
+                        I enjoy tackling ambitious projects (see my resume for details) and
+                        I'm always looking for opportunities to challenge myself and create value.
+                        Please check out my portfolio to see what I've been building 😊
+                    </p>
+                    <p class="profile-paragraph">
+                        Outside of work, I enjoy lifting, playing soccer and travelling to new places. 
                     </p>
                 </div>
                 <div class="contact-section">
