--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <p class="profile-paragraph">
                         I enjoy tackling ambitious projects (see my resume for details) and
                         I'm always looking for opportunities to challenge myself and create value.
-                        Please check out my portfolio to see what I've been building 😊
+                        Please check out my portfolio to see what I've been building. 
                     </p>
                     <p class="profile-paragraph">
-                        Outside of work, I enjoy lifting, playing soccer and travelling to new places. 
+                        Outside of work, I enjoy lifting, playing soccer and travelling to new places :)
                     </p>
                 </div>
                 <div class="contact-section">
