--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Profile Section -->
     <section id="profile">
         <div class="profile-container">
-            <div class="profile-pic-container
+            <div class="profile-pic-container">
                 <img src="assets/photo.jpeg" alt="Richard Ayebare" class="profile-pic">
             </div>
             <div class="profile-content">
@@ -54,9 +54,12 @@
                         My core drive is building useful, tangible products.
                     </p>
                     <p class="profile-paragraph">
-                        I passionate about tackling ambitious projects (check my resume for details)
-                        and I thrive in spaces where I can grow, challenge myself and contribute meaningfully. 
-                        Feel free to check out my work to see what I've been building 😊
+                        I enjoy about tackling ambitious projects (check my resume for details)
+                        and I'm always looking for opportunities where I can grow, challenge myself and create value. 
+                        Feel free to check out my work to see what I've been building.
+                    </p>
+                    <p class="profile-paragraph">
+                        Outside of work, I enjoy lifting, playing soccer and travelling to new places :)
                     </p>
                 </div>
                 <div class="contact-section">
