--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     </p>
                     <p class="profile-paragraph">
                         I enjoy about tackling ambitious projects (check my resume for details)
-                        and I'm always looking for opportunities where I can grow, challenge myself and create value. 
-                        Feel free to check out my work to see what I've been building.
+                        and I'm always looking for opportunities where I can grow, challenge myself and contribute meaningfully. 
+                        Feel free to check out my work to see what I've been building. 😊
                     </p>
                     <p class="profile-paragraph">
-                        Outside of work, I enjoy lifting, playing soccer and travelling to new places :)
+                        Outside of work, I enjoy lifting, playing soccer and travelling to new places. 
                     </p>
                 </div>
                 <div class="contact-section">
