--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="profile-paragraph">
                         I enjoy about tackling ambitious projects (check my resume for details)
                         and I'm always looking for opportunities where I can grow, challenge myself and contribute meaningfully. 
-                        Feel free to check out my work to see what I've been building. 😊
+                        Feel free to check out my work to see what I've been building.
                     </p>
                     <p class="profile-paragraph">
                         Outside of work, I enjoy lifting, playing soccer and travelling to new places. 
