Update internship description in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         My core drive is building useful, tangible products.
                     </p>
                     <p class="profile-paragraph">
-                        I enjoy about tackling ambitious projects (check my resume for details)
+                        I've interned both at big companies and startups (check my resume for details)
                         and I'm always looking for opportunities where I can grow, challenge myself and contribute meaningfully. 
                         Feel free to check out my work to see what I've been building.
                     </p>
